stability client + fix up